<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_upload"
        android:enabled="true"
        android:icon="@drawable/ic_upload_white_24dp"
        android:title="@string/text_upload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/text_settings"
        app:showAsAction="ifRoom" />
</menu>