<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="16dp"
    android:paddingBottom="32dp"
    android:background="?attr/colorCard"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:text="@string/file_info"
        android:textSize="14sp"
        android:textColor="?attr/colorText"
        style="@style/TextAppearance.AppCompat.Body2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorText"
            android:text="@string/file_size"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorText"
            android:text="@string/time_to_remove_from_server"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/time_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorText"
            android:text="@string/full_file_link"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/full_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorText"
            android:textIsSelectable="true"
            android:autoLink="web"
            android:textColorLink="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>